added hire me button link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h3>Proffessional web developer</h3>
             <p>Hi this is Sabbir Ahmed.I am studying computer science and I am experinced on Html,Css,js,react.js,node.js and django.I created around 10 projects.Now i would like to do an internship as a front end developer 
             </p>
-            <a class="link-button" target="blank" href="https://www.linkedin.com/in/sabbir-ahmed-2977491b3/">Hire Me</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/sabbir-ahmed-2977491b3/">Hire Me</a>
         </div>
         <div class="half-width">
             <img src="C:\web development\my projects\web-portfolio\images\profile1.jpg" alt="">
