added box shadow and footer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,19 +9,55 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Stylish&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to </h1>
-            <h1> <span class="name-highlighter">Sabbir Ahmed's</span> website</h1>
+            <h1> <span class="orange-highlighter">Sabbir Ahmed's</span> website</h1>
             <h3>Proffessional web developer</h3>
-            <p>Hi this is Sabbir Ahmed.I am studying computer science and I am experinced on Html,Css,js,react.js,node.js and django.I created around 10 projects.Now i would like to do an internship as a front end developer 
+            <p>Hi this is Sabbir Ahmed.I am studying computer science and I am experinced on
+                Html,Css,js,react.js,node.js and django.I created simple Blog site and a Ecommerce site using django.Now
+                i would like to do an internship as a front end developer
             </p>
-            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/sabbir-ahmed-2977491b3/">Hire Me</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/sabbir-ahmed-2977491b3/">Hire
+                Me</a>
         </div>
         <div class="half-width">
             <img src="C:\web development\my projects\web-portfolio\images\profile1.jpg" alt="">
         </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="C:\web development\my projects\web-portfolio\images\profile2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>To Become A World Class Web Developer</h3>
+            <p>My dream is to be a good web developer.I want to get a job at a world famous IT company.I already learned
+                HTML CSS.My goal is to build 5 big prjects for my portfolio</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/sabbir-ahmed-2977491b3/">DOWNLOAD
+                RESUME</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full Stack Web Ddeveloper</h2>
+            <h3 class="orange-highlighter">2021-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div id="baby-web" class=" half-width single-experience">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange-highlighter">2020-2021 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remote web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+    </section>
+    <footer>
+        <p>
+            copyright Sabbir.All right reserved.
+        </p>
+    </footer>
 </body>
+
 </html>
