--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 Me</a>
         </div>
         <div class="half-width">
-            <img src="C:\web development\my projects\web-portfolio\images\profile1.jpg" alt="">
+            <img src="images\profile1.jpg" alt="">
         </div>
     </section>
     <section class="dream-area">
         <div class="half-width">
-            <img src="C:\web development\my projects\web-portfolio\images\profile2.png" alt="">
+            <img src="images\profile2.png" alt="">
         </div>
         <div class="half-width">
             <h2>Big Dream</h2>
